fixing display on mobile

--- a/styles.css
+++ b/styles.css
@@ -558,7 +558,7 @@ form {
   .navbar {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
   }
 
   .task-info {
